--- a/style.css
+++ b/style.css
@@ -81,3 +81,26 @@ a:nth-of-type(12) {
 
 
 /* Hieronder komen jouw animaties */
+
+
+.bibber{
+  animation-name:bibber;
+  animation-timing-function: cubic-bezier(0.28, 0.84, 0.42, 1);
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+}
+
+@keyframes bibber {
+    0%, 100% { 
+      transform: translateX(0) 
+    }
+    10%, 30%, 50%, 70%, 90% { 
+      transform: translateX(10px) 
+    }
+    20%, 40%, 60%, 80% { 
+      transform: translateX(-10px) 
+    }
+   }
+
+
+   
